Make the chart settings headers fixed so they're always visible

--- a/src/main/javascript/app/modules/analyze/components/analyze-chart/analyze-chart.component.scss
+++ b/src/main/javascript/app/modules/analyze/components/analyze-chart/analyze-chart.component.scss
@@ -21,16 +21,25 @@ analyze-chart {
   }
 
   .axis-options {
-    padding: 5px 10px;
     border: 1px solid #EEE;
     border-radius: 5px;
+    min-height: 50px;
     max-height: 245px;
     overflow-y: scroll;
+    overflow-x: hidden;
+
+    .axis-option-checkboxes {
+      padding: 40px 10px 5px;
+    }
 
     h3 {
+      box-sizing: border-box;
       font-size: 16px;
+      position: fixed;
+      width: 85%;
+      background: white;
       border-bottom: 1px solid #EEE;
-      padding: 5px;
+      padding: 5px 10px;
       margin: 0 0 10px;
       font-weight: 600;
     }
